# ellishape_cli

./: README.md  pyproject.toml  test.ps1  test_time.py  verify.ps1
src/data/: test.csv  tree_time.csv
src/ellishape/: __init__.py  cli.py
src/ellishape/ElliShape/: ElliShape.py
src/ellishape/ElliShape/functions/: EFA.py  binarize_func.py  cal_area_c.py  calc_dc_components_modify.py  calc_harmonic_coefficients_modify.py  calc_traversal_dist.py  calc_traversal_time.py  chain_code_func.py  code2axis.py  contour_extraction_func.py  corrosion_func.py  dilation_func.py  enhancement_func.py  fourier_approx_norm_modify.py  grayscale_func.py  gui_chain_code_func.py  inverted_colors_func.py  is_completed_chain_code.py  plot_chain_code.py  plot_fourier_approx_modify.py  write_Data_To_File.py
src/ellishape_cli/: E_dist_mean.py  __main__.py  cli.py  get_kind_list.py  global_vars.py  min_dist_tree.py  nj_tree.py  plot_matrix.py  reconstruct.py  split.py  tree.py
src/ellishape_cli/show/: tree2pic.py
tests/: cpu_vs_gpu.py  min_dist_tree.py  speed_test.py  test.py  test_batch.ps1  test_time.py  tree_from_dist_matrix.py  verify.ps1
