[project]
name = "ellishape-cli"
version = "1.0.0"
description = "Add your description here"
authors = [
    { name = "Sally yang", email = "2500876951@qq.com" },
    { name = "Ping Wu", email = "wpwupingwp@outlook.com" },
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "loguru>=0.7.2",
    "numpy<2.0",
]
readme = "README.md"
requires-python = ">= 3.10"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]

[project.urls]
"Homepage" = "https://www.plantplus.cn/ElliShape/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "pyqt5>=5.15.11",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ellishape_cli"]
