[project]
name = "ellishape-cli"
version = "1.4.0"
description = "Command-line version of ellishape"
authors = [
    { name = "Ping Wu", email = "wpwupingwp@outlook.com" },
    { name = "Sally yang", email = "2500876951@qq.com" },
]
dependencies = [
    "opencv-contrib-python>=4.10.0.84",
    "loguru>=0.7.2",
    "numpy>1.26",
    "memoization>=0.4.0",
    "biopython>=1.84",
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]

[project.urls]
"Homepage" = "https://www.plantplus.cn/ElliShape/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ellishape_cli"]
